BUG#48165, needed to introduce length restrictions on partitioning fields to ensure that no stack overruns occur